[package]
name = "rutsubo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combu = "1.1.23"
percent-encoding = "2.2.0"
ron = "0.8.0"
serde = {version="1.0.152",features=["derive"]}
serde_json = "1.0.91"
time = { version = "0.3.20", features = ["macros", "parsing", "formatting"] }
