[package]
name = "rutsubo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combu = "1.2.0"
nibi = "0.1.2"
percent-encoding = "2.3.1"
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["macros", "parsing", "formatting"] }
